# Algorithms

./: .gitignore
3d_convex_hull/: 3d_convex_hull.cpp  CMakeLists.txt
convex_hull/: CMakeLists.txt  convex_hull.hpp  main.cpp
geometry/: core.hpp  main.cpp  vector.hpp
kdtree/: CMakeLists.txt  README.md  kdtree.hpp  main.cpp  test.cpp
pointcloud_processing/kdtree/: CMakeLists.txt  README.md  kdtree.hpp  main.cpp  test.cpp
polygon_processing/: CMakeLists.txt
polygon_processing/concave_hull/: LICENSE  concave_hull.cpp  concave_hull.hpp
polygon_processing/convex_hull/: convex_hull.cpp  convex_hull.hpp
polygon_processing/geometry_operations/: geometric_definitions.hpp  point_inside_polygon.hpp  polygon_area.hpp  polygon_centroid.hpp  polygon_concavity.hpp  polygon_triangulation.hpp
polygon_processing/src/: concave_hull.cpp  main.cpp
quad_tree/: CMakeLists.txt  main.cpp  quad_tree.hpp
